--- a/reality.yaml
+++ b/reality.yaml
@@ -58,30 +58,6 @@ proxies:
       Host: r.luozhi.site                     
 
 
-- name: hk.luozhi.site
-  type: vless
-  server : hk.luozhi.site
-  port : 10707
-  uuid : 58b51418-8ddf-488e-d41a-d4ca5e2e0811
-  tls : true
-  sni : hk.luozhi.site
-  alpn : [ "h2", "http/1.1" ]
-  skip-cert-verify : false
-  network : ws
-  ws-opts : { "path": "/" }
-
-- name: 越南
-  type: vless  
-  server : 59.153.218.122
-  port : 34045
-  uuid : d8dd94fd-540e-461d-b5d4-acebef02c22a
-  tls : true
-  sni : visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me
-  client-fingerprint : firefox
-  alpn : [ "default" ]
-  skip-cert-verify : false
-  reality-opts : { "public-key": "cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA", "short-id": "e8ab71d0" }
-  network : tcp
 
 
 
@@ -110,6 +86,118 @@ proxies:
   sni: www.bing.com                                
   skip-cert-verify: true
 
+- name: vless-reality-vision-ser689214569345               
+  type: vless
+  server: 154.219.115.30                           
+  port: 64733                                
+  uuid: 41e21555-a0f8-4bea-889b-4ed4773dbc57   
+  network: tcp
+  udp: true
+  tls: true
+  flow: xtls-rprx-vision
+  servername: www.yahoo.com                 
+  reality-opts: 
+    public-key: E-cP9rGTuZUW7fx8ovK9WrblymESdVLFWUd5xj6sRxs    
+    short-id: 3e9f39f4                    
+  client-fingerprint: chrome                  
+
+- name: vmess-ws-ser689214569345                         
+  type: vmess
+  server: 154.219.115.30                        
+  port: 2086                                     
+  uuid: 41e21555-a0f8-4bea-889b-4ed4773dbc57       
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: false
+  network: ws
+  servername: www.bing.com                    
+  ws-opts:
+    path: "41e21555-a0f8-4bea-889b-4ed4773dbc57-vm"                             
+    headers:
+      Host: www.bing.com                     
+
+- name: hysteria2-ser689214569345                            
+  type: hysteria2                                      
+  server: 154.219.115.30                               
+  port: 20987                                
+  password: 41e21555-a0f8-4bea-889b-4ed4773dbc57                          
+  alpn:
+    - h3
+  sni: www.bing.com                               
+  skip-cert-verify: true
+  fast-open: true
+
+- name: tuic5-ser689214569345                            
+  server: 154.219.115.30                      
+  port: 23732                                    
+  type: tuic
+  uuid: 41e21555-a0f8-4bea-889b-4ed4773dbc57       
+  password: 41e21555-a0f8-4bea-889b-4ed4773dbc57   
+  alpn: [h3]
+  disable-sni: true
+  reduce-rtt: true
+  udp-relay-mode: native
+  congestion-controller: bbr
+  sni: www.bing.com                                
+  skip-cert-verify: true
+
+- name: vless-reality-vision-VM99429               
+  type: vless
+  server: 206.237.5.233                           
+  port: 53753                                
+  uuid: 657640f2-016a-4cd6-97e3-dec6ad19c458   
+  network: tcp
+  udp: true
+  tls: true
+  flow: xtls-rprx-vision
+  servername: www.yahoo.com                 
+  reality-opts: 
+    public-key: NcRfrvq4Npj7YIfT-eYMY0L-6FrsWwXHwhfOr7jaPyc    
+    short-id: b0725e6d                    
+  client-fingerprint: chrome                  
+
+- name: vmess-ws-VM99429                         
+  type: vmess
+  server: 206.237.5.233                        
+  port: 2086                                     
+  uuid: 657640f2-016a-4cd6-97e3-dec6ad19c458       
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: false
+  network: ws
+  servername: www.bing.com                    
+  ws-opts:
+    path: "657640f2-016a-4cd6-97e3-dec6ad19c458-vm"                             
+    headers:
+      Host: www.bing.com                     
+
+- name: hysteria2-VM99429                            
+  type: hysteria2                                      
+  server: 206.237.5.233                               
+  port: 51616                                
+  password: 657640f2-016a-4cd6-97e3-dec6ad19c458                          
+  alpn:
+    - h3
+  sni: www.bing.com                               
+  skip-cert-verify: true
+  fast-open: true
+
+- name: tuic5-VM99429                            
+  server: 206.237.5.233                      
+  port: 11367                                    
+  type: tuic
+  uuid: 657640f2-016a-4cd6-97e3-dec6ad19c458       
+  password: 657640f2-016a-4cd6-97e3-dec6ad19c458   
+  alpn: [h3]
+  disable-sni: true
+  reduce-rtt: true
+  udp-relay-mode: native
+  congestion-controller: bbr
+  sni: www.bing.com                                
+  skip-cert-verify: true
+
 proxy-groups:
 - name: 负载均衡
   type: load-balance
@@ -121,8 +209,35 @@ proxy-groups:
     - vmess-ws-racknerd-21de492
     - hysteria2-racknerd-21de492
     - tuic5-racknerd-21de492
-    - hk.luozhi.site
-    - 越南
+    - vless-reality-vision-ser689214569345
+    - vmess-ws-ser689214569345
+    - hysteria2-ser689214569345
+    - tuic5-ser689214569345
+    - vless-reality-vision-VM99429
+    - vmess-ws-VM99429
+    - hysteria2-VM99429
+    - tuic5-VM99429
+
+proxy-groups:
+- name: 负载均衡
+  type: load-balance
+  url: https://www.gstatic.com/generate_204
+  interval: 300
+  strategy: round-robin
+  proxies:
+    - vless-reality-vision-racknerd-21de492                              
+    - vmess-ws-racknerd-21de492
+    - hysteria2-racknerd-21de492
+    - tuic5-racknerd-21de492
+    - vless-reality-vision-ser689214569345
+    - vmess-ws-ser689214569345
+    - hysteria2-ser689214569345
+    - tuic5-ser689214569345
+    - vless-reality-vision-VM99429
+    - vmess-ws-VM99429
+    - hysteria2-VM99429
+    - tuic5-VM99429
+
 - name: 自动选择
   type: url-test
   url: https://www.gstatic.com/generate_204
@@ -133,8 +248,15 @@ proxy-groups:
     - vmess-ws-racknerd-21de492
     - hysteria2-racknerd-21de492
     - tuic5-racknerd-21de492
-    - hk.luozhi.site
-    - 越南
+    - vless-reality-vision-ser689214569345
+    - vmess-ws-ser689214569345
+    - hysteria2-ser689214569345
+    - tuic5-ser689214569345
+    - vless-reality-vision-VM99429
+    - vmess-ws-VM99429
+    - hysteria2-VM99429
+    - tuic5-VM99429
+    
 - name: 🌍选择代理节点
   type: select
   proxies:
@@ -145,8 +267,14 @@ proxy-groups:
     - vmess-ws-racknerd-21de492
     - hysteria2-racknerd-21de492
     - tuic5-racknerd-21de492
-    - hk.luozhi.site
-    - 越南
+    - vless-reality-vision-ser689214569345
+    - vmess-ws-ser689214569345
+    - hysteria2-ser689214569345
+    - tuic5-ser689214569345
+    - vless-reality-vision-VM99429
+    - vmess-ws-VM99429
+    - hysteria2-VM99429
+    - tuic5-VM99429
 rules:
   - GEOIP,LAN,DIRECT
   - GEOIP,CN,DIRECT
