--- a/DIY.yaml
+++ b/DIY.yaml
@@ -26,7 +26,7 @@ dns:
       - 240.0.0.0/4
 
 proxies:
-- name: vless-reality-vision-ser689214569345               
+- name: vless-reality-vision-HK
   type: vless
   server: 154.219.115.30                           
   port: 64733                                
@@ -41,7 +41,7 @@ proxies:
     short-id: 3e9f39f4                    
   client-fingerprint: chrome                  
 
-- name: vmess-ws-ser689214569345                         
+- name: vmess-ws-HK
   type: vmess
   server: 154.219.115.30                        
   port: 2086                                     
@@ -57,11 +57,7 @@ proxies:
     headers:
       Host: www.bing.com                     
 
-
-
-
-
-- name: hysteria2-ser689214569345                            
+- name: hysteria2-HK
   type: hysteria2                                      
   server: 154.219.115.30                               
   port: 20987                                
@@ -72,7 +68,7 @@ proxies:
   skip-cert-verify: true
   fast-open: true
 
-- name: tuic5-ser689214569345                            
+- name: tuic5-HK
   server: 154.219.115.30                      
   port: 23732                                    
   type: tuic
@@ -86,6 +82,63 @@ proxies:
   sni: www.bing.com                                
   skip-cert-verify: true
 
+- name: vless-reality-vision-racknerd-US
+  type: vless
+  server: 107.172.219.105                           
+  port: 10163                                
+  uuid: 62ebc9b3-6a4f-4048-a1b1-90f36266808c   
+  network: tcp
+  udp: true
+  tls: true
+  flow: xtls-rprx-vision
+  servername: www.yahoo.com                 
+  reality-opts: 
+    public-key: IAOjdmzNrctl-QEwV6mPVGdRR1WHfnuGy5CeXRJbohc    
+    short-id: 5973b9a0                    
+  client-fingerprint: chrome                  
+
+- name: vmess-ws-racknerd-US
+  type: vmess
+  server: www.visa.com.tw                        
+  port: 8080                                     
+  uuid: 62ebc9b3-6a4f-4048-a1b1-90f36266808c       
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: false
+  network: ws
+  servername: 107.172.219.105                    
+  ws-opts:
+    path: "62ebc9b3-6a4f-4048-a1b1-90f36266808c-vm"                             
+    headers:
+      Host: 107.172.219.105                     
+
+- name: hysteria2-racknerd-US
+  type: hysteria2                                      
+  server: 107.172.219.105                               
+  port: 39814                                
+  password: 62ebc9b3-6a4f-4048-a1b1-90f36266808c                          
+  alpn:
+    - h3
+  sni: www.bing.com                               
+  skip-cert-verify: true
+  fast-open: true
+
+- name: tuic5-racknerd-US
+  server: 107.172.219.105                      
+  port: 47726                                    
+  type: tuic
+  uuid: 62ebc9b3-6a4f-4048-a1b1-90f36266808c       
+  password: 62ebc9b3-6a4f-4048-a1b1-90f36266808c   
+  alpn: [h3]
+  disable-sni: true
+  reduce-rtt: true
+  udp-relay-mode: native
+  congestion-controller: bbr
+  sni: www.bing.com                                
+  skip-cert-verify: true
+
+
 proxy-groups:
 - name: 负载均衡
   type: load-balance
@@ -93,10 +146,14 @@ proxy-groups:
   interval: 300
   strategy: round-robin
   proxies:
-    - vless-reality-vision-ser689214569345                              
-    - vmess-ws-ser689214569345
-    - hysteria2-ser689214569345
-    - tuic5-ser689214569345
+    - vless-reality-vision-HK                              
+    - vmess-ws-HK
+    - hysteria2-HK
+    - tuic5-HK
+    - vless-reality-vision-racknerd-US
+    - vmess-ws-racknerd-US
+    - hysteria2-racknerd-US
+    - tuic5-racknerd-US
 
 - name: 自动选择
   type: url-test
@@ -104,10 +161,14 @@ proxy-groups:
   interval: 300
   tolerance: 50
   proxies:
-    - vless-reality-vision-ser689214569345                              
-    - vmess-ws-ser689214569345
-    - hysteria2-ser689214569345
-    - tuic5-ser689214569345
+    - vless-reality-vision-HK                              
+    - vmess-ws-HK
+    - hysteria2-HK
+    - tuic5-HK
+    - vless-reality-vision-racknerd-US
+    - vmess-ws-racknerd-US
+    - hysteria2-racknerd-US
+    - tuic5-racknerd-US
     
 - name: 🌍选择代理节点
   type: select
