--- a/ALL.yaml
+++ b/ALL.yaml
@@ -22,6 +22,16 @@ proxy-providers:
       url: https://www.gstatic.com/generate_204
       interval: 300
     proxy: 直连
+  subs:
+    url: "https://gist.githubusercontent.com/luozhi2321/c5e022abffc4634592928e3c8e57e180/raw/mihomo.yaml"
+    type: http
+    interval: 86400
+    health-check:
+      enable: true
+      url: https://www.gstatic.com/generate_204
+      interval: 300
+    proxy: 直连
+
 
 # 节点信息
 proxies:
