--- a/ALL.yaml
+++ b/ALL.yaml
@@ -42,6 +42,16 @@ proxy-providers:
       interval: 300
     proxy: 直连
 
+   US.luozhi:
+    url: "https://us.luozhi.site:2283/hui/luozhi.lz442553"
+    type: http
+    interval: 86400
+    health-check:
+      enable: true
+      url: https://www.gstatic.com/generate_204
+      interval: 300
+    proxy: 直连
+
     
 
 # 节点信息
